--- a/index.html
+++ b/index.html
@@ -96,17 +96,15 @@
           <div class="section-detail-wrapper">
             <!-- <h3 class="section-heading">Hello!</h3> -->
             <p class="section-text">
-              Hi there 👋! I'm a self-thought web develpoer 🚀. I'm interested
-              in tech, web develpoment, sports and art.
+              Hi there 👋! I'm a self-taught web developer 🚀. I'm passionate about technology, web development, sports, and art.
             </p>
             <p class="section-text">
-              I love crafting/testing web elements! I also like CrossFit and
-              American Football! Welcome to my portfolio!
+              I enjoy crafting and testing web elements! In addition, I'm a fan of CrossFit and American Football. Welcome to my portfolio!
             </p>
             <p class="section-text">
               I've got experience in:
             </p>
-            <ul>
+            <ul class="section-text">
               <li>HTML</li>
               <li>CSS (with Bootstrap)</li>
               <li>JavaScript</li>
